--- a/ContactForm/index.html
+++ b/ContactForm/index.html
@@ -68,6 +68,12 @@
                                 <button type="submit" class="btn btn-primary btn-lg">Limpiar</button>
                             </div>
                         </div>
+
+                        <div class="form-group">
+                            <div class="col-md-12 text-center">
+                                <button type="submit" class="btn btn-primary btn-lg">Recordar Datos</button>
+                            </div>
+                        </div>
                     </fieldset>
                 </form>
             </div>
